movie details sending to producer fixed

--- a/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
+++ b/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
@@ -34,7 +34,7 @@
           <p class="card-text" style="color: #343a40; font-size: 1.1em; font-weight: 500;">
             <strong>Producers:</strong>
             <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-top: 8px;">
-              <a *ngFor="let producer of movie?.producers" [routerLink]="['/producer', producer.id]">
+              <a *ngFor="let producer of movie?.producers" [routerLink]="['/producers', producer.id]">
                             <span class="badge badge-pill" style="
                                 padding: 8px 12px;
                                 background-color: #7d1324;
