--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -25,11 +25,15 @@
   
       <div class="d-flex align-items-center">
         <!-- Add Movie Button -->
-        <!-- <h1 style="color: #7d1324">
-          <a *ngIf="isAuthenticated && hasPermission('add_movie')" [routerLink]="['/add-movie']">
-            <i class="bi bi-plus-square-fill mt-1 mr-2" style="color: #7d1324"></i>
-          </a>
-        </h1> -->
+        <h1 style="color: #7d1324">
+          <!-- <a *ngIf="isAuthenticated && hasPermission('add_movie')"[routerLink]="['/add-movie']"> -->
+            <a [routerLink]="'/movies/add'">
+              <i class="bi bi-plus-square-fill mt-1 mr-2" style="color: #7d1324"></i>
+
+            </a>
+
+          <!-- </a> -->
+        </h1>
   
         <!-- Search Form -->
         <!-- <form (ngSubmit)="onSearch()" class="d-flex mb-0">
@@ -86,6 +90,8 @@
       <!-- No Movies Message -->
       <p *ngIf="movies.length === 0">No movies found.</p>
     </div>
+
+    
   </div>
   
   <!-- Styling -->
