--- a/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
+++ b/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
@@ -1,19 +1,19 @@
 <div class="container mt-5" style="position: relative;">
 
-  <!-- <div class="d-flex justify-content-between align-items-center">
+  <div class="d-flex justify-content-between align-items-center">
 
     <h1 class="mb-4" style="color: #7d1324;">{{ movie?.title }}</h1>
 
-    <div *ngIf="user.isAuthenticated && user.permissions.includes('change_movie') && user.permissions.includes('delete_movie')">
-      <a [routerLink]="['/edit-movie', movie?.id]" class="btn btn-secondary me-2">
+    <!-- <div *ngIf="user.isAuthenticated && user.permissions.includes('change_movie') && user.permissions.includes('delete_movie')"> -->
+      <a [routerLink]="['/movies/', movie?.id, 'edit']" class="btn btn-secondary me-2">
         <i class="fas fa-edit"></i> Edit
       </a>
 
       <button class="btn btn-danger" (click)="deleteMovie()">
         <i class="fas fa-trash"></i> Delete
       </button>
-    </div>
-  </div> -->
+    <!-- </div> -->
+  </div>
 
 
   <div class="row">
