--- a/MovieHubFrontend/src/app/components/add-movie/add-movie.component.html
+++ b/MovieHubFrontend/src/app/components/add-movie/add-movie.component.html
@@ -22,7 +22,7 @@
                             <label class="form-label" for="duration"
                                 style="color: #343a40; font-weight: 500;">Duration</label>
                             <input formControlName="duration" id="duration" class="form-control"
-                                placeholder="Duration (e.g., 2h 30m)" required>
+                                placeholder="Duration (e.g. 120m)" required>
                             <!-- <div *ngIf="form.controls.duration.invalid && form.controls.duration.touched" class="invalid-feedback">
                                 Duration is required.
                             </div> -->
@@ -64,43 +64,45 @@
                         </div>
 
 
-                        <!-- Genres -->
-                        <div class="col-md-6 mb-3">
-                            <label class="form-label" for="genres"
-                                style="color: #343a40; font-weight: 500;">Genres</label>
-                            <div
-                                style="max-height: 200px; overflow-y: auto; border: 1px solid #7d1324; padding: 10px; border-radius: 5px;">
-                                <div *ngFor="let genre of genres" class="form-check">
-                                    <input type="checkbox" (change)="onCheckboxChange($event, 'genres')"
-                                        [checked]="form.value.genres.includes(genre.id)" [value]="genre.id"
-                                        class="form-check-input" id="genre-{{genre.id}}">
-                                    <label class="form-check-label" for="genre-{{genre.id}}">
-                                        {{genre.name}}
-                                    </label>
+                        <div class="row">
+                            <!-- Genres -->
+                            <div class="col-md-6 mb-3">
+                                <label class="form-label" for="genres"
+                                    style="color: #343a40; font-weight: 500;">Genres</label>
+                                <div
+                                    style="max-height: 200px; overflow-y: auto; border: 1px solid #7d1324; padding: 10px; border-radius: 5px;">
+                                    <div *ngFor="let genre of genres" class="form-check">
+                                        <input type="checkbox" (change)="onCheckboxChange($event, 'genres')"
+                                            [checked]="form.value.genres.includes(genre.id)" [value]="genre.id"
+                                            class="form-check-input" id="genre-{{genre.id}}">
+                                        <label class="form-check-label" for="genre-{{genre.id}}">
+                                            {{genre.name}}
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Release Date and Score -->
+                            <div class="col-md-6">
+                                <!-- Release Date -->
+                                <div class="mb-3">
+                                    <label class="form-label" for="release_date"
+                                        style="color: #343a40; font-weight: 500;">Release Date</label>
+                                    <input formControlName="release_date" id="release_date" type="date"
+                                        class="form-control" required>
+                                </div>
+
+                                <!-- Score -->
+                                <div class="mb-3">
+                                    <label class="form-label" for="score"
+                                        style="color: #343a40; font-weight: 500;">Score</label>
+                                    <input formControlName="score" id="score" type="number" class="form-control"
+                                        placeholder="Score (e.g., 8.5)" required>
                                 </div>
                             </div>
                         </div>
 
 
-                        <!-- Release Date -->
-                        <div class="col-md-6 mb-3">
-                            <label class="form-label" for="release_date"
-                                style="color: #343a40; font-weight: 500;">Release Date</label>
-                            <input formControlName="release_date" id="release_date" type="date" class="form-control"
-                                required>
-                            <!-- <div *ngIf="form.controls.release_date.invalid && form.controls.release_date.touched" class="invalid-feedback">
-                                Release date is required.
-                            </div> -->
-                        </div>
-
-                        <!-- Score -->
-                        <div class="col-md-6 mb-3">
-                            <label class="form-label" for="score"
-                                style="color: #343a40; font-weight: 500;">Score</label>
-                            <input formControlName="score" id="score" type="number" class="form-control"
-                                placeholder="Score (e.g., 8.5)" required>
-                            
-                        </div>
 
                         <!-- Synopsis -->
                         <div class="col-md-12 mb-3">
