--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -68,7 +68,10 @@
             </p>
   
             <!-- Like Button -->
-            <button (click)="toggleFavorite(movie.id)" style="background: none; border: none; cursor: pointer; position: absolute; bottom: 20px; right: 20px;">
+            <button (click)="toggleFavorite(movie.id)" 
+            
+            style="background: none; border: none; cursor: pointer; position: absolute; bottom: 20px; right: 20px;">
+
               <i
                 class="bi"
                 [ngClass]="{
