--- a/MovieHubFrontend/src/app/components/actor-details/actor-details.component.html
+++ b/MovieHubFrontend/src/app/components/actor-details/actor-details.component.html
@@ -2,24 +2,23 @@
     Header Section
     <div class="d-flex justify-content-between align-items-center">
       <h1 class="mb-4" style="color: #7d1324;">{{ actor?.name }}</h1>
-      <!-- <div>
+      <div>
 
         <a
-          *ngIf="userIsAuthenticated && canEditActor"
-          [routerLink]="['/edit-actor', actor?.id]"
-          class="btn btn-secondary me-2"
+          
+          [routerLink]="['/actors/', actor?.id, 'edit']"
+          class="btn btn-secondary me-2"  
         >
           <i class="fas fa-edit"></i> Edit
         </a>
 
         <button
-          *ngIf="userIsAuthenticated && canDeleteActor"
           (click)="onDeleteActor(actor?.id)"
           class="btn btn-danger"
         >
           <i class="fas fa-trash"></i> Delete
         </button>
-      </div> -->
+      </div>
     </div>
   
     <!-- Actor Details -->
