warning to favorites

--- a/MovieHubFrontend/src/app/components/favorite-list/favorite-list.component.html
+++ b/MovieHubFrontend/src/app/components/favorite-list/favorite-list.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="!isLoggedIn" class="alert alert-danger alert-dismissible fade show" role="alert">
+    WARNING: You are not logged in, therefore this page is only temporary.
+</div>
+
 
 
  <div class="row">
