removed users comment

--- a/MovieHubFrontend/src/app/components/navbar/navbar.component.html
+++ b/MovieHubFrontend/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           <li class="nav-item"><a class="nav-link" routerLink="/producers">Producers</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/favorites">My Favorites <i class="bi bi-heart"></i></a>
           </li>
-          <li class="nav-item"><a class="nav-link" routerLink="/users">All Users</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" routerLink="/users">All Users</a></li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
