--- a/MovieHubFrontend/src/app/components/register/register.component.html
+++ b/MovieHubFrontend/src/app/components/register/register.component.html
@@ -14,22 +14,28 @@
                         <div class="form-group mb-4 pb-2">
                             <label class="form-label">E-mail:</label>
                             <input formControlName="email" type="email" class="form-control" placeholder="E-mail" required>
-
-
                         </div>
                         <div class="form-group mb-4 pb-2">
                             <label class="form-label">Password:</label>
-                            <input formControlName="password" type="password" class="form-control"
-                                placeholder="Password:" required>
-
+                            <input formControlName="password" type="password" class="form-control" placeholder="Password:" required>
                         </div>
-                            <p>put the select here</p>
-                        <button type="submit" class="btn btn-primary">Sign Up</button>
 
-                        <!-- <p class="mt-2">Already have an account? <a href="{% url 'login' %}">Log in</a></p> -->
+                        <!-- Add Select for Group -->
+                        <div class="form-group mb-4 pb-2">
+                            <label class="form-label">Group:</label>
+                            <select formControlName="groups" class="form-control" required>
+                                <option value="" disabled selected>Select a Group</option>
+                                <option *ngFor="let group of groupLabels | keyvalue" [value]="group.key">
+                                    {{ group.value }}
+                                </option>
+                            </select>
+                            
+                        </div>
 
+                        <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Sign Up</button>
+
+                        <p class="mt-3">Already have an account? <a  routerLink="/login">Log in</a></p>
                     </form>
-
                 </div>
             </div>
         </div>
