--- a/MovieHubFrontend/src/assets/css/style.css
+++ b/MovieHubFrontend/src/assets/css/style.css
@@ -2788,8 +2788,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #6c757d;
+  border-color: #E06F6C;
 }
 
 .btn-secondary {
