--- a/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
+++ b/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex justify-content-between align-items-center">
 
     <h1 class="mb-4" style="color: #7d1324;">{{ movie?.title }}</h1>
-
+    <div>
     <!-- <div *ngIf="user.isAuthenticated && user.permissions.includes('change_movie') && user.permissions.includes('delete_movie')"> -->
       <a [routerLink]="['/movies/', movie?.id, 'edit']" class="btn btn-secondary me-2">
         <i class="fas fa-edit"></i> Edit
@@ -12,8 +12,10 @@
       <button class="btn btn-danger" (click)="deleteMovie()">
         <i class="fas fa-trash"></i> Delete
       </button>
+    </div>
     <!-- </div> -->
   </div>
+
 
 
   <div class="row">
