botoes para usuarios mas esta lagado

--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -26,13 +26,16 @@
       <div class="d-flex align-items-center">
         <!-- Add Movie Button -->
         <h1 style="color: #7d1324">
-          <!-- <a *ngIf="isAuthenticated && hasPermission('add_movie')"[routerLink]="['/add-movie']"> -->
-            <a [routerLink]="'/movies/add'">
-              <i class="bi bi-plus-square-fill mt-1 mr-2" style="color: #7d1324"></i>
-
-            </a>
-
-          <!-- </a> -->
+          <a
+          *ngIf="authenticated && userperms.includes('add_movie')"
+          [routerLink]="['/movies/add']"
+          title="Add New Movie"
+        >
+          <i
+            class="bi bi-plus-square-fill mt-1 mr-2"
+            style="color: #7d1324;"
+          ></i>
+        </a>
         </h1>
   
         <!-- Search Form -->
