--- a/MovieHubFrontend/src/app/components/producer-list/producer-list.component.html
+++ b/MovieHubFrontend/src/app/components/producer-list/producer-list.component.html
@@ -13,7 +13,7 @@
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="mb-4" style="color: #7d1324;">Producers</h1>
 
-    <div class="ms-auto">
+    <div *ngIf="hasPerm"  class="ms-auto">
 
       <!-- Add Movie Button -->
       <h1 style="color: #7d1324">
