--- a/MovieHubFrontend/src/app/components/actor-list/actor-list.component.html
+++ b/MovieHubFrontend/src/app/components/actor-list/actor-list.component.html
@@ -27,7 +27,7 @@
       <a [routerLink]="['/actors']">Actors</a>
     </h1>
 
-    <div class="d-flex align-items-center">
+    <div *ngIf="hasPerm" class="d-flex align-items-center">
       <!-- Add Movie Button -->
       <h1 style="color: #7d1324">
         <!-- <a *ngIf="isAuthenticated && hasPermission('add_movie')"[routerLink]="['/add-movie']"> -->
