--- a/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
+++ b/MovieHubFrontend/src/app/components/movie-details/movie-details.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex justify-content-between align-items-center">
 
     <h1 class="mb-4" style="color: #7d1324;">{{ movie?.title }}</h1>
-    <div>
+    <div *ngIf="hasPerm" >
     <!-- <div *ngIf="user.isAuthenticated && user.permissions.includes('change_movie') && user.permissions.includes('delete_movie')"> -->
       <a [routerLink]="['/movies/', movie?.id, 'edit']" class="btn btn-secondary me-2">
         <i class="fas fa-edit"></i> Edit
