--- a/MovieHubFrontend/src/app/components/producer-details/producer-details.component.html
+++ b/MovieHubFrontend/src/app/components/producer-details/producer-details.component.html
@@ -1,21 +1,28 @@
 <div class="container mt-5" style="position: relative;">
-    <div class="d-flex justify-content-between align-items-center">
+    <!-- <div class="d-flex justify-content-between align-items-center">
       <h1 class="mb-4" style="color: #7d1324;">{{ producer?.name }}</h1>
-    </div>
+    </div> -->
   
-    <div class="d-flex justify-content-between align-items-center">
+  <div class="d-flex justify-content-between align-items-center">
+    <h1 class="mb-4" style="color: #7d1324;">{{ producer?.name }}</h1>
 
-  
-      <!-- <div *ngIf="user.isAuthenticated && user.permissions.includes('change_movie') && user.permissions.includes('delete_movie')"> -->
-        <a [routerLink]="['/producers/', producer?.id, 'edit']" class="btn btn-secondary me-2">
-          <i class="fas fa-edit"></i> Edit
-        </a>
-  
-        <button class="btn btn-danger" (click)="onDeleteProducer(producer?.id)">
-          <i class="fas fa-trash"></i> Delete
-        </button>
-      <!-- </div> -->
+    <div *ngIf="hasPerm"  class="d-flex justify-content-between align-items-center">
+      <!-- Mostrar Editar e Deletar apenas se o usuário estiver autenticado e tiver permissões -->
+      <a
+        [routerLink]="['/producers/', producer?.id, 'edit']"
+        class="btn btn-secondary me-2"
+      >
+        <i class="fas fa-edit"></i> Edit
+      </a>
+
+      <button
+        class="btn btn-danger"
+        (click)="onDeleteProducer(producer?.id)"
+      >
+        <i class="fas fa-trash"></i> Delete
+      </button>
     </div>
+  </div>
     <!-- Producer Details -->
     <div class="row">
       <!-- Producer Information -->
