presentation less go

--- a/MovieHubFrontend/src/app/components/actor-list/actor-list.component.html
+++ b/MovieHubFrontend/src/app/components/actor-list/actor-list.component.html
@@ -24,7 +24,7 @@
   <!-- Header and Search -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 style="color: #7d1324" class="mb-0">
-      <a [routerLink]="['/actors']">Actors</a>
+     Actors
     </h1>
 
     <div *ngIf="hasPerm" class="d-flex align-items-center">
