--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -19,10 +19,7 @@
   
     <!-- Header Section -->
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 style="color: #7d1324" class="mb-0">
-        <a [routerLink]="['/movies']">Movies</a>
-      </h1>
-  
+      <h1 class="mb-0" style="color: #7d1324;">Movies</h1>
       <div *ngIf="hasPerm" class="d-flex align-items-center">
         <!-- Add Movie Button -->
         <h1 style="color: #7d1324">
